Controlled radio button group

--- a/src/shared/ui/RadioCardComponent/RadioCardGroup/styles.module.sass
+++ b/src/shared/ui/RadioCardComponent/RadioCardGroup/styles.module.sass
@@ -1,7 +1,6 @@
 .group
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(32%, 1fr))
-    // grid-template-rows: auto
-    // grid-auto-flow: dense
     gap: 1rem
     flex-wrap: wrap
+    border: none
