--- a/src/shared/pages/cart/classes.module.sass
+++ b/src/shared/pages/cart/classes.module.sass
@@ -20,3 +20,12 @@
     grid-row: 2 / span 1
     min-width: 24rem
     overflow: scroll
+
+@media screen and (max-width: 46.25rem)
+
+    .content
+        grid-column: 1 / span 12
+
+    .summary
+        grid-column: 1 / span 12
+        grid-row: 3 / span 1
