--- a/src/shared/pages/cart/ui/ProductCard/styles.module.sass
+++ b/src/shared/pages/cart/ui/ProductCard/styles.module.sass
@@ -8,6 +8,9 @@
     padding-bottom: 2rem
     margin-bottom: 2rem
 
+    &:last-of-type
+        border-bottom: 0px dashed #d4d4d4
+
 .image
     height: 200px
     width: 280px
@@ -16,7 +19,7 @@
 
     img
         border-radius: 6px
-        object-fit: contain
+        object-fit: cover
 
 .content
     display: flex
