--- a/src/shared/pages/checkout/styles.module.sass
+++ b/src/shared/pages/checkout/styles.module.sass
@@ -20,3 +20,12 @@
 .right
     grid-column: 7 / span 6
     grid-row: 3 / span 1
+
+@media screen and (max-width: 46.25rem)
+
+    .left
+        grid-column: 1 / span 12
+
+    .right
+        grid-column: 1 / span 12
+        grid-row: 4 / span 1
