update responsivness styles

--- a/src/shared/pages/cart/styles.module.sass
+++ b/src/shared/pages/cart/styles.module.sass
@@ -21,6 +21,14 @@
     min-width: 24rem
     overflow: scroll
 
+@media screen and (max-width:78.75rem)
+    .content
+        grid-column: 1 / span 12
+
+    .summary
+        grid-column: 1 / span 12
+        grid-row: 3 / span 1
+
 @media screen and (max-width: 46.25rem)
 
     .content
