--- a/src/shared/pages/checkout/styles.module.sass
+++ b/src/shared/pages/checkout/styles.module.sass
@@ -21,6 +21,15 @@
     grid-column: 7 / span 6
     grid-row: 3 / span 1
 
+@media screen and (max-width:78.75rem)
+
+    .left
+        grid-column: 1 / span 12
+
+    .right
+        grid-column: 1 / span 12
+        grid-row: 4 / span 1
+
 @media screen and (max-width: 46.25rem)
 
     .left
