--- a/src/shared/pages/cart/ui/ProductCard/styles.module.sass
+++ b/src/shared/pages/cart/ui/ProductCard/styles.module.sass
@@ -36,3 +36,22 @@
     display: flex
     align-items: center
     column-gap: 1rem
+
+.footerRight
+    font-weight: 500
+    font-size: 18px
+    line-height: 156%
+    text-align: right
+    color: #171717
+    white-space: nowrap
+
+@media screen and (max-width: 46.25rem)
+    .main
+        flex-direction: column
+        row-gap: 1rem
+
+    .image
+        aspect-ratio: 319 / 200
+        width: 100%
+
+    .footerRight
