--- a/src/shared/pages/checkout/ui/OrderSummary/OrderProduct/styles.module.sass
+++ b/src/shared/pages/checkout/ui/OrderSummary/OrderProduct/styles.module.sass
@@ -23,3 +23,8 @@
 
     & + *
         white-space: nowrap
+
+        font-weight: 600
+        font-size: 1.125rem
+        line-height: 156%
+        color: #171717
