--- a/src/shared/pages/checkout/ui/OrderSummary/OrderSummaryDetails/styles.module.sass
+++ b/src/shared/pages/checkout/ui/OrderSummary/OrderSummaryDetails/styles.module.sass
@@ -13,12 +13,7 @@
     align-items: center
     justify-content: space-between
 
-    // font-weight: 600
-    // font-size: 1.125rem
-    // line-height: 156%
-    // color: #171717
-
-    &:last-child
+    & > *:last-of-type
 
         font-weight: 600
         font-size: 1.125rem
