Add navigation if order success

--- a/src/shared/pages/cart/ui/ProductCard/styles.module.sass
+++ b/src/shared/pages/cart/ui/ProductCard/styles.module.sass
@@ -39,11 +39,13 @@
 
 .footerRight
     font-weight: 500
-    font-size: 18px
+    font-size: 1.125rem
     line-height: 156%
     text-align: right
     color: #171717
     white-space: nowrap
+
+    user-select: none
 
 @media screen and (max-width: 46.25rem)
     .main
@@ -53,5 +55,3 @@
     .image
         aspect-ratio: 319 / 200
         width: 100%
-
-    .footerRight
