--- a/src/shared/pages/checkout/ui/OrderSummary/styles.module.sass
+++ b/src/shared/pages/checkout/ui/OrderSummary/styles.module.sass
@@ -7,7 +7,7 @@
     padding: 2rem
     padding-top: calc(2rem + 4px)
     width: 100%
-    // height: calc(100% - 2rem)
+    height: 100%
 
 .wrapper
     display: flex
