--- a/src/shared/ui/Typography/style.module.sass
+++ b/src/shared/ui/Typography/style.module.sass
@@ -60,6 +60,14 @@
 
 .body-sm
     @include base
+    font-weight: 400
+    font-size: 1rem //16px
+    line-height: 150%
+    color: #525252
 
 .body-xs
     @include base
+    font-weight: 400
+    font-size: 14px
+    line-height: 143%
+    color: #525252
