--- a/src/shared/pages/checkout/ui/OrderSummary/OrderProduct/styles.module.sass
+++ b/src/shared/pages/checkout/ui/OrderSummary/OrderProduct/styles.module.sass
@@ -28,3 +28,9 @@
         font-size: 1.125rem
         line-height: 156%
         color: #171717
+
+    & div:first-of-type
+        font-weight: 500
+        font-size: 20px
+        line-height: 140%
+        color: #171717
