--- a/src/shared/ui/Button/style.module.sass
+++ b/src/shared/ui/Button/style.module.sass
@@ -30,6 +30,12 @@
         background: #f5f5f5
         color: #a3a3a3
 
+.accent
+    color: #4338ca!important
+
+    svg
+        fill: #4338ca
+
 .lg
     @include base
     padding: 1rem 4.1875rem
@@ -73,6 +79,9 @@
     line-height: 143%
     color: #171717
     max-height: 40px
+
+    svg
+        fill: #171717
 
     &:hover
         box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.06), 0 1px 3px 0 rgba(0, 0, 0, 0.1)
