Save payment data after seccessfull in store

--- a/src/shared/widgets/cart/OrderProduct/styles.module.sass
+++ b/src/shared/widgets/cart/OrderProduct/styles.module.sass
@@ -34,3 +34,21 @@
         font-size: 20px
         line-height: 140%
         color: #171717
+
+.price
+    display: flex
+    flex-direction: column
+    row-gap: 0.5rem
+    align-items: flex-end
+    line-height: 156%
+
+    & div:first-of-type
+        font-weight: 600
+        font-size: 18px
+        color: #171717
+
+    & div:nth-of-type(2)
+        font-weight: 400
+        font-size: 18px
+        text-decoration: line-through
+        color: #525252
