--- a/src/shared/pages/cart/ui/ProductCard/styles.module.sass
+++ b/src/shared/pages/cart/ui/ProductCard/styles.module.sass
@@ -38,14 +38,25 @@
     column-gap: 1rem
 
 .footerRight
-    font-weight: 500
-    font-size: 1.125rem
-    line-height: 156%
-    text-align: right
-    color: #171717
+    display: flex
+    gap: 0.5rem
+    align-items: center
     white-space: nowrap
-
     user-select: none
+
+    & div:first-of-type
+        font-weight: 500
+        font-size: 18px
+        line-height: 156%
+        text-align: right
+        color: #171717
+
+    & div:nth-of-type(2)
+        font-weight: 400
+        font-size: 12px
+        line-height: 133%
+        text-decoration: line-through
+        color: #525252
 
 @media screen and (max-width: 46.25rem)
     .main
