Update fonts in payment form

--- a/src/shared/ui/Typography/style.module.sass
+++ b/src/shared/ui/Typography/style.module.sass
@@ -1,6 +1,6 @@
 @mixin base
     color: #030712
-    font-family: var(--font-geist-sans), 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family: var(--font-main), 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 
 .h1
     h1
