--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -6,7 +6,7 @@ html, body
   max-width: 100vw
   min-height: 100vh
   overflow-x: hidden
-  font-family: var(--font-geist-sans)
+  font-family: var(--font-main)
 
 body
   color: var(--foreground)
@@ -19,7 +19,7 @@ body
   box-sizing: border-box
   padding: 0
   margin: 0
-  font-family: var(--font-geist-sans)
+  font-family: var(--font-main)
 
 a
   color: inherit
