--- a/src/shared/ui/Button/style.module.sass
+++ b/src/shared/ui/Button/style.module.sass
@@ -8,7 +8,7 @@
     align-items: center
     justify-content: center
     column-gap: 0.375rem
-    font-family: var(--font-geist-sans)
+    font-family: var(--font-main)
 
     font-weight: 500
     font-size: 1.125rem
