Add subscription page

--- a/src/shared/ui/Typography/style.module.sass
+++ b/src/shared/ui/Typography/style.module.sass
@@ -3,31 +3,27 @@
     font-family: var(--font-main), 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 
 .h1
-    h1
-        @include base
-        font-size: 3rem
-        font-weight: 500
-        line-height: 1
+    @include base
+    font-size: 3rem
+    font-weight: 600
+    line-height: 1
 
 .h2
-    h2
-        @include base
-        font-size: 2.25rem
-        line-height: 111%
+    @include base
+    font-size: 2.25rem
+    line-height: 111%
 
 .h3
-    h3
-        @include base
-        font-weight: 500
-        font-size: 1.875rem
-        line-height: 120%
+    @include base
+    font-weight: 500
+    font-size: 1.875rem
+    line-height: 120%
 
 .h4
-    h4
-        @include base
-        font-weight: 400
-        font-size: 1.5rem
-        line-height: 133%
+    @include base
+    font-weight: 400
+    font-size: 1.5rem
+    line-height: 133%
 
 .title-lg
     @include base
@@ -53,7 +49,7 @@
 .body-md
     @include base
     font-weight: 400
-    font-size: 14px
+    font-size: 1.185rem //18px
     line-height: 143%
     color: #525252
     width: auto
@@ -68,6 +64,6 @@
 .body-xs
     @include base
     font-weight: 400
-    font-size: 14px
+    font-size: 0.875rem //14px
     line-height: 143%
     color: #525252
